--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ li {
   list-style-type: none;
   margin: 8px;
   padding: 8px;
-  float: left;
-  display: block;
+  display: inline;
 }
+
 
 }
 #apps-icon {
-  max-width: 10%;
+  max-width: 100%;
 }
