--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 #nav-bar {
   font-size: 13px;
   font-color: #5f6368;
+  display: flex;
+  flex-direction: column;
 }
 li {
   list-style-type: none;
@@ -18,8 +20,6 @@ li {
   display: inline;
 }
 
-
-}
 #apps-icon {
-  max-width: 100%;
+  max-width: 5%;
 }
