--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
 #page-wrapper {
   font-family: arial, sans serif;
   text-align: center;
+  padding-bottom: 2.5rem;
 }
 #page-wrapper link {
   text-decoration: none;
@@ -33,4 +38,7 @@ footer {
   text-align: center;
   font-size: 13px;
   position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
