--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ li {
 #apps-icon {
   max-width: 5%;
 }
+.search {
+  width: 50%;
+  padding: 10px 20px;
+  margin: 20px;
+  border-radius: 20px;
+}
 footer {
   text-align: center;
   font-size: 13px;
