--- a/style.css
+++ b/style.css
@@ -22,8 +22,12 @@ a:hover {
   font-size: 13px;
   font-color: #5f6368;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 0;
+  margin: 0 0 20px 0;
 }
+
 li {
   list-style-type: none;
   margin: 8px;
