--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ a:hover {
   padding: 0;
   margin: 0 0 20px 0;
 }
+.nav-button {
+  background-color: #4285f4;
+  color: #fff;
+  font-weight: bold;
+  border: 1px solid #4285f4;
+  padding: 8px 12px;
+  border-radius: 4px;
+}
 
 li {
   list-style-type: none;
