--- a/style.css
+++ b/style.css
@@ -5,7 +5,24 @@
   text-align: center;
   padding-bottom: auto;
 }
-
+.box {
+  padding: 5px;
+  font-size: 13px;
+}
+.rb {
+  padding-right: 10px;
+}
+.nav-left {
+  float: left;
+  border: 1px solid;
+}
+.about {
+  padding-right: 10px;
+}
+.nav-right {
+  float: right;
+  border: 1px solid;
+}
 a:link {
   text-decoration: none;
   color: #222;
@@ -14,22 +31,8 @@ a:link {
 a:hover {
   text-decoration: underline;
 }
-.link {
-  font-size: 13px;
-  flex: 1;
-  display: flex;
-  justify-content: flex-start;
 
-  /* border: 1px solid black; */
-  margin: 0;
-  padding: 0;
-}
-
-.link-2 {
-  padding-right: 55rem;
-}
-
-.link-6 {
+.sign-in {
   background-color: #4285f4;
   color: #fff;
   font-weight: bold;
@@ -38,11 +41,7 @@ a:hover {
   margin: 0px;
   border-radius: 2px;
 }
-li {
-  list-style-type: none;
-  margin: 8px;
-  padding: 8px;
-}
+
 #header-img {
   margin: 4rem 0 0 1rem;
 }
@@ -63,14 +62,16 @@ li {
 }
 #footer {
   display: flex;
-  justify-content: center;
+  /* flex: 1; */
+  justify-content: flex-start;
   font-family: arial, sans serif;
   font-size: 13px;
   position: absolute;
   bottom: 0;
   width: 100vw;
+
   height: 2.5rem;
-  padding: 0 0 0.5rem 0;
+  /* padding: 0 0 0.5rem 0; */
   background-color: #f2f2f2;
   border: 1px solid #e4e4e4;
   color: #5f6368;
@@ -78,7 +79,7 @@ li {
 .footer {
   /* display: flex;
   flex: 1; */
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
   border: 1px solid black;
   /* width: 100vw; */
 }
