Added voice icon and edited search bar.

--- a/style.css
+++ b/style.css
@@ -58,14 +58,28 @@ a:hover {
   max-width: 25px;
 }
 .search {
-  width: 50%;
+  width: 60%;
   padding: 10px 20px;
   margin: 20px;
+  border: 0.1px solid #dcdcdc;
   border-radius: 20px;
   color: #5f6368;
 }
+.search: hover {
+  box-shadow: 1px 1px 8px 1px #dcdcdc;
+}
+.search:focus-within {
+  box-shadow: 1px 2px 8px 1px #dcdcdc;
+  outline: none;
+}
 #form-group {
   color: #5f6368;
+}
+.voice {
+  height: 20px;
+  position: relative;
+  top: 10px;
+  left: 10px;
 }
 footer {
   width: 100%;
